[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/Boss.gd" type="Script" id=1]
[ext_resource path="res://sprite/enemies/boss.png" type="Texture" id=2]
[ext_resource path="res://shaders/shader.shader" type="Shader" id=3]
[ext_resource path="res://Scenes/Block.tscn" type="PackedScene" id=5]

[sub_resource type="PhysicsMaterial" id=1]

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="CircleShape2D" id=3]
radius = 56.0

[sub_resource type="Animation" id=4]
resource_name = "walk"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.255591 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0.00254453, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
emission_shape = 1
emission_sphere_radius = 20.0
flag_disable_z = true
gravity = Vector3( 0, -60, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 10.0
radial_accel = 10.0
scale = 10.0
color_ramp = SubResource( 6 )

[node name="Boss" type="RigidBody2D"]
collision_layer = 0
collision_mask = 2147483648
mode = 2
physics_material_override = SubResource( 1 )
gravity_scale = 8.5
custom_integrator = true
contacts_reported = 3
contact_monitor = true
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 2 )
position = Vector2( 0, 24.836 )
texture = ExtResource( 2 )
offset = Vector2( 0, -26 )
hframes = 2
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="Cooldown" type="Timer" parent="."]
one_shot = true

[node name="RayCast2DRight" type="RayCast2D" parent="."]
position = Vector2( 28.9701, 5.95275 )
enabled = true
cast_to = Vector2( 0, 32 )
collision_mask = 0

[node name="RayCast2DLeft" type="RayCast2D" parent="."]
position = Vector2( -29.3669, 5.5559 )
enabled = true
cast_to = Vector2( 0, 32 )
collision_mask = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "walk"
anims/walk = SubResource( 4 )

[node name="Particles2D" type="Particles2D" parent="."]
emitting = false
amount = 10
one_shot = true
explosiveness = 1.0
process_material = SubResource( 7 )

[node name="Blocks" type="Node2D" parent="."]

[node name="Sprite" parent="Blocks" instance=ExtResource( 5 )]
position = Vector2( 0, -104 )

[node name="Sprite2" parent="Blocks" instance=ExtResource( 5 )]
position = Vector2( -32, -104 )

[node name="Sprite3" parent="Blocks" instance=ExtResource( 5 )]
position = Vector2( 32, -104 )

[node name="Sprite4" parent="Blocks" instance=ExtResource( 5 )]
position = Vector2( -104, -32 )

[node name="Sprite7" parent="Blocks" instance=ExtResource( 5 )]
position = Vector2( 104, -32 )

[node name="Sprite8" parent="Blocks" instance=ExtResource( 5 )]
position = Vector2( 104, 0 )

[node name="Sprite9" parent="Blocks" instance=ExtResource( 5 )]
position = Vector2( 104, 32 )

[node name="Sprite5" parent="Blocks" instance=ExtResource( 5 )]
position = Vector2( -104, 32 )

[node name="Sprite6" parent="Blocks" instance=ExtResource( 5 )]
position = Vector2( -104, 0 )
[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
[connection signal="body_entered" from="." to="." method="_on_Enemy2_body_entered"]
[connection signal="timeout" from="Cooldown" to="." method="_on_Cooldown_timeout"]
